5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1183.log
== TEST (2019-05-28 11:03:19) 
-- CODE:
from numpy import*

vetor=array(eval(input(":")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:34) 
-- CODE:
from numpy import*

vetor=array(eval(input(":")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- EXECUTION TIME:
0.449398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 12, in <module>
    tam_final=zeros(tam_final, dtype=int)
NameError: name 'tam_final' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:41) 
-- CODE:
from numpy import*

vetor=array(eval(input(":")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:46) 
-- CODE:
from numpy import*

vetor=array(eval(input(":")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:07:21) 
-- CODE:
from numpy import*

vetor=array(eval(input("x:")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:07:27) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
negativos=0

while(i<size(vetor)):
	if(vetor[i]<0):
		negativos=negativos+1
	i=i+1
tam_final=zeros(tam_final, dtype=int)

i=0
j=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		vetor_final[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:21:29) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
c=0
j=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		c=c+1
	i=i+1
v1=zeros(c, dtype=int)

i=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		v1[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- EXECUTION TIME:
0.371895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    print(vetor_final)
NameError: name 'vetor_final' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:31) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
c=0
j=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		c=c+1
	i=i+1
v1=zeros(c, dtype=int)

i=0

while(i<size(vetor)):
	if(vetor[i]>=0):
		v1[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:05) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
c=0
j=0
while(i<size(vetor)):
	if vetor[i]>=0:
		c=c+1
	i=i+1
v1=zeros(c, dtype=int)

i=0
while(i<size(vetor)):
	if vetor[i]>=0:
		v1[j]=vetor[i]
		j=j+1
	i=i+1
print(vetor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:42) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
c=0
j=0
while(i<size(vetor)):
	if vetor[i]>=0:
		c=c+1
	i=i+1
v1=zeros(c, dtype=int)

i=0
while(i<size(vetor)):
	if vetor[i]>=0:
		v1[j]=vetor[i]
		j=j+1
	i=i+1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:23:48) 
-- CODE:
from numpy import*

vetor=array(eval(input("x: ")))

i=0
c=0
j=0
while(i<size(vetor)):
	if vetor[i]>=0:
		c=c+1
	i=i+1
v1=zeros(c, dtype=int)

i=0
while(i<size(vetor)):
	if vetor[i]>=0:
		v1[j]=vetor[i]
		j=j+1
	i=i+1
print(v1)
-- EXECUTION TIME:
0.379818
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
